k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cust-cloud
  labels:
    project: cust-cloud-computing
    course: CPE4541
